Admin Panel: Fixed issue of Double Scrollbar

--- a/src/components/admin/admin.less
+++ b/src/components/admin/admin.less
@@ -5,6 +5,7 @@ mno-admin {
   width: 100%;
   display: block;
   position: absolute;
+  overflow-y: hidden;
 
   /* Animation between states */
   #sidebar-wrapper, #content-wrapper {
